WIP: DynamicMaps for scrolling through diagnostic plots for each position.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180129 Prototyping.ipynb
@@ -86,7 +86,7 @@
     "from trench_detection import *\n",
     "from trench_detection import _label_for_trenches\n",
     "from trench_segmentation import *\n",
-    "from utils import *"
+    "from util import *"
    ]
   },
   {
@@ -203,7 +203,140 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trench_points = get_trenches(root_group[\"raw\"][\"0\"], 0, diagnostics=diag)"
+    "diag_pos = tree()\n",
+    "trench_points_pos = {\n",
+    "    pos: fail_silently(\n",
+    "        lambda: get_trenches(root_group[\"raw\"][str(pos)], 0, diagnostics=diag_pos[pos])\n",
+    "    )\n",
+    "    for pos in range(50)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_pos.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[k for k, v in trench_points_pos.items() if v is None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_pos[0][\"label_1\"][\"image_with_trenches\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.DynamicMap(\n",
+    "    lambda pos: diag_pos[pos][\"label_1\"][\"periodogram_1\"][\"periodogram\"], kdims=[\"pos\"]\n",
+    ").redim.values(pos=range(50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(hv.HoloMap({pos: diag_pos[pos][\"image\"] for pos in range(2)}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_pos[0][\"image\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dmap = hv.DynamicMap(lambda pos: diag_pos[pos][\"image\"], kdims=[\"pos\"]).redim.values(\n",
+    "    pos=[k for k, v in trench_points_pos.items() if v is not None]\n",
+    ")\n",
+    "regrid(dmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = diag_pos[0][\"label_1\"][\"image_with_trenches\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(a.Image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(diag_pos[0][\"labeled_image\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(a.Image)  # * a.Points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dmap = hv.DynamicMap(\n",
+    "    lambda pos: diag_pos[pos][\"label_1\"][\"image_with_trenches\"], kdims=[\"pos\"]\n",
+    ").redim.values(pos=[k for k, v in trench_points_pos.items() if v is not None])\n",
+    "# regrid(dmap)\n",
+    "dmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_points = get_trenches(root_group[\"raw\"][\"2\"], 0, diagnostics=diag)"
    ]
   },
   {
@@ -218,264 +351,6 @@
     "for k, v in disp.items():\n",
     "    with k:\n",
     "        display(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Points?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Points(trench_points[1][0])  # * diag['image']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(diag[\"image\"].data)\n",
-    "# plt.scatter(*anchors.T, s=3, c='w')\n",
-    "plt.scatter(*trench_points[1][0].T, s=3, c=\"g\")\n",
-    "plt.scatter(*trench_points[1][1].T, s=3, c=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label = \"label_1\"\n",
-    "signal = diag[label][\"peaks\"].data[(\"Curve\", \"I\")].data[:, 1]\n",
-    "xs = diag[label][\"peaks\"].data[(\"Scatter\", \"I\")].data[:, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(range(len(signal)), signal)\n",
-    "plt.scatter(xs, signal[xs.astype(np.int_)], c=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dxs = np.diff(xs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dxs.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dxs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "period_min, period_max = 10, 50\n",
-    "bins = 1000\n",
-    "periods = np.linspace(period_min, period_max, bins)\n",
-    "std = scipy.stats.iqr(((xs) % periods[:, np.newaxis]), axis=1) / periods"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(((xs[1:] - xs[:-1, np.newaxis]) % 23.56).flat, bins=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = np.sum(np.diff(((xs) % periods[:, np.newaxis]), axis=1) ** 2, axis=1) / periods\n",
-    "plt.plot(periods, q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = scipy.stats.iqr(((xs) % periods[:, np.newaxis]), axis=1) / periods\n",
-    "plt.plot(periods, a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cropped_signal = signal[500:]\n",
-    "plt.plot(range(len(cropped_signal)), cropped_signal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.interpolate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = scipy.interpolate.interp1d(range(len(signal)), signal, kind=\"cubic\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "signal2 = f(np.linspace(0, len(signal), 1000, endpoint=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = scipy.signal.welch(signal2, nperseg=1000, scaling=\"spectrum\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = w[1].argmax()\n",
-    "f = w[0][idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 / w[0][idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 / f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(*w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i1, i2 = 170, 180\n",
-    "plt.plot(w[0][i1:i2], w[1][i1:i2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 / w[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(xs % 24.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(periods, std)"
    ]
   },
   {
