Added diagnostic to trench rotation detection, reorganized and added a few more diagnostic entries.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180130 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180130 Prototyping.ipynb
@@ -171,15 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = tree()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_browser(plots, displays=None):\n",
     "    if isinstance(plots, Mapping):\n",
     "        accordion = widgets.Accordion(\n",
@@ -188,8 +179,6 @@
     "        for i, k in enumerate(plots.keys()):\n",
     "            accordion.set_title(i, k)\n",
     "        return accordion\n",
-    "    elif isinstance(plots, Sequence):\n",
-    "        raise NotImplementedError\n",
     "    else:\n",
     "        output = widgets.Output()\n",
     "        displays[output] = plots\n",
@@ -206,28 +195,12 @@
     "diag_pos = tree()\n",
     "trench_points_pos = {\n",
     "    pos: fail_silently(\n",
-    "        lambda: get_trenches(root_group[\"raw\"][str(pos)], 0, diagnostics=diag_pos[pos])\n",
+    "        lambda: get_trenches(\n",
+    "            root_group[\"raw\"][str(pos)][0, 30], diagnostics=diag_pos[pos]\n",
+    "        )\n",
     "    )\n",
-    "    for pos in range(350)\n",
+    "    for pos in range(20)\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag_pos.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[k for k, v in trench_points_pos.items() if v is None]"
    ]
   },
   {
@@ -247,7 +220,7 @@
    "source": [
     "hv.DynamicMap(\n",
     "    lambda pos: diag_pos[pos][\"label_1\"][\"periodogram_1\"][\"periodogram\"], kdims=[\"pos\"]\n",
-    ").redim.values(pos=range(50))"
+    ").redim.values(pos=range(20))"
    ]
   },
   {
@@ -257,63 +230,6 @@
    "outputs": [],
    "source": [
     "regrid(hv.HoloMap({pos: diag_pos[pos][\"image\"] for pos in range(2)}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag_pos[0][\"image\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dmap = hv.DynamicMap(lambda pos: diag_pos[pos][\"image\"], kdims=[\"pos\"]).redim.values(\n",
-    "    pos=[k for k, v in trench_points_pos.items() if v is not None]\n",
-    ")\n",
-    "regrid(dmap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = diag_pos[0][\"label_1\"][\"image_with_trenches\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(a.Image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(diag_pos[0][\"labeled_image\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(a.Image)  # * a.Points"
    ]
   },
   {
@@ -367,7 +283,17 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trench_points = get_trenches(root_group[\"raw\"][\"2\"], 0, diagnostics=diag)"
+    "diag = tree()\n",
+    "trench_points = get_trenches(root_group[\"raw\"][\"0\"][0, 30], diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"label_1\"][\"trench_rotation\"][\"hough_1\"][\"log_hough\"].redim.range(x=(-1, 1))"
    ]
   },
   {
