WIP display_plot_browser that handles timepoints/positions browsing. It should work but doesn't.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180130 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180130 Prototyping.ipynb
@@ -162,7 +162,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_group[\"quantized\"][\"0\"].shape"
+    "def plot_browser_old(plots, displays=None):\n",
+    "    if isinstance(plots, Mapping):\n",
+    "        accordion = widgets.Accordion(\n",
+    "            children=[plot_browser_old(v, displays=displays) for v in plots.values()]\n",
+    "        )\n",
+    "        for i, k in enumerate(plots.keys()):\n",
+    "            accordion.set_title(i, k)\n",
+    "        return accordion\n",
+    "    else:\n",
+    "        output = widgets.Output()\n",
+    "        displays[output] = plots\n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "disp = {}\n",
+    "display(plot_browser(diag, disp))\n",
+    "for k, v in disp.items():\n",
+    "    with k:\n",
+    "        display(v)"
    ]
   },
   {
@@ -171,18 +189,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_browser(plots, displays=None):\n",
-    "    if isinstance(plots, Mapping):\n",
-    "        accordion = widgets.Accordion(\n",
-    "            children=[plot_browser(v, displays=displays) for v in plots.values()]\n",
-    "        )\n",
-    "        for i, k in enumerate(plots.keys()):\n",
-    "            accordion.set_title(i, k)\n",
-    "        return accordion\n",
+    "def display_plot_browser(plots, stream=None):\n",
+    "    to_display = {}\n",
+    "    if stream is None:\n",
+    "        initial_plots = plots\n",
     "    else:\n",
+    "        initial_plots = plots(**stream.contents)\n",
+    "    browser = plot_browser(initial_plots, to_display)\n",
+    "    display(browser)\n",
+    "    display_plot_browser_contents(plots, to_display, stream=stream)\n",
+    "    return browser\n",
+    "\n",
+    "\n",
+    "def _plot_browser_dmap(callback, **kwargs):\n",
+    "    return callback(**kwargs)\n",
+    "\n",
+    "\n",
+    "def display_plot_browser_contents(plots, to_display, stream=None):\n",
+    "    for output, (obj, path) in to_display.items():\n",
+    "        if frame_stream is None:\n",
+    "            with output:\n",
+    "                display(obj)\n",
+    "        else:\n",
+    "            if isinstance(obj, hv.Element):\n",
+    "                # preprocess: make into DynamicMaps, regrid Images, etc.\n",
+    "                # dmap = hv.DynamicMap(lambda **kwargs: recursive_getattr(plots(**kwargs), path), streams=[stream])\n",
+    "                # display(dmap)\n",
+    "                pass\n",
+    "            else:\n",
+    "                # normal python type\n",
+    "                def callback(**kwargs):\n",
+    "                    with output:\n",
+    "                        display(recursive_getattr(plots(**kwargs), path))\n",
+    "\n",
+    "                callback(**stream.contents)\n",
+    "                frame_stream.add_subscriber(callback)\n",
+    "\n",
+    "\n",
+    "def plot_browser(plots, to_display=None, path=()):\n",
+    "    if not isinstance(plots, Mapping):\n",
+    "        raise NotImplementedError\n",
+    "    children = []\n",
+    "    singleton_children = [k for k, v in plots.items() if not isinstance(v, Mapping)]\n",
+    "    for k in singleton_children:\n",
+    "        label = widgets.HTML(\"<b>{}</b>\".format(k))\n",
     "        output = widgets.Output()\n",
-    "        displays[output] = plots\n",
-    "        return output"
+    "        to_display[output] = (plots[k], path + (k,))\n",
+    "        child = widgets.HBox([label, output])\n",
+    "        children.append(child)\n",
+    "    nested_children = [k for k in plots.keys() if k not in singleton_children]\n",
+    "    if nested_children:\n",
+    "        accordion_children = [\n",
+    "            plot_browser(plots[k], to_display=to_display, path=(path + (k,)))\n",
+    "            for k in nested_children\n",
+    "        ]\n",
+    "        accordion = widgets.Accordion(children=accordion_children)\n",
+    "        for i, k in enumerate(nested_children):\n",
+    "            accordion.set_title(i, k)\n",
+    "        children.append(accordion)\n",
+    "    return widgets.VBox(children)\n",
+    "\n",
+    "\n",
+    "display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stream = big_image_viewer(root_group[\"quantized\"])"
    ]
   },
   {
@@ -201,35 +278,6 @@
     "    )\n",
     "    for pos in range(20)\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag_pos[0][\"label_1\"][\"image_with_trenches\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.DynamicMap(\n",
-    "    lambda pos: diag_pos[pos][\"label_1\"][\"periodogram_1\"][\"periodogram\"], kdims=[\"pos\"]\n",
-    ").redim.values(pos=range(20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(hv.HoloMap({pos: diag_pos[pos][\"image\"] for pos in range(2)}))"
    ]
   },
   {
@@ -324,9 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Image viewers"
    ]
@@ -334,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def select(xs, mask):\n",
@@ -435,9 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "FrameStream = Stream.define(\"Frame\", t=0, v=0)\n",
@@ -467,7 +509,7 @@
     "        label=\"t\", min=0, max=num_timepoints, step=1, value=0, continuous_update=False\n",
     "    )\n",
     "    v_slider = widgets.IntSlider(\n",
-    "        min=0, max=num_fovs, step=1, value=0, continuous_update=False\n",
+    "        label=\"v\", min=0, max=num_fovs, step=1, value=0, continuous_update=False\n",
     "    )\n",
     "    slider_box = widgets.VBox([v_slider, t_slider])\n",
     "    t_slider.observe(lambda change: frame_stream.event(t=change[\"new\"]), names=\"value\")\n",
@@ -487,9 +529,7 @@
     "            pos_stack[c, t, :, :] for c in range(num_channels) if channel_enabled[c]\n",
     "        ]\n",
     "        img = composite_channels(channel_imgs, select(channel_colors, channel_enabled))\n",
-    "        viewer = hv.RGB(img[::-1], bounds=(0, 0, img.shape[1], img.shape[0])).opts(\n",
-    "            plot={\"invert_yaxis\": True}\n",
-    "        )\n",
+    "        viewer = RevRGB(img)\n",
     "        return viewer\n",
     "\n",
     "    image = hv.DynamicMap(\n",
@@ -502,7 +542,7 @@
     "    display(box)\n",
     "    with output:\n",
     "        display(image)\n",
-    "    return None\n",
+    "    return frame_stream\n",
     "\n",
     "\n",
     "big_image_viewer(root_group[\"quantized\"])"
@@ -511,9 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def overlay_image_viewer(frames):\n",
@@ -549,7 +587,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true,
     "hideCode": true
    },
    "outputs": [],
@@ -668,9 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def trench_peaks_callback(t, y):\n",
@@ -691,9 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -713,9 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for t in range(kymo.shape[1] // 5):\n",
