Minimal test case of bug: only last of multiple output fields in display_plot_browser updates according to stream.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
@@ -219,7 +219,6 @@
     "            else:\n",
     "                # normal python type\n",
     "                def callback(**kwargs):\n",
-    "\n",
     "                    with output:\n",
     "                        clear_output()\n",
     "                        display((kwargs, np.random.random()))\n",
@@ -256,6 +255,24 @@
     "frame_stream = FrameStream()\n",
     "display(frame_browser(root_group[\"quantized\"], frame_stream))\n",
     "display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = widgets.Output()\n",
+    "display(o)\n",
+    "# normal python type\n",
+    "    def callback(**kwargs):\n",
+    "        with output:\n",
+    "            clear_output()\n",
+    "            display((kwargs, np.random.random()))\n",
+    "            #display(recursive_getattr(plots(**kwargs), path))\n",
+    "    #callback(**stream.contents)\n",
+    "    frame_stream.add_subscriber(callback)"
    ]
   },
   {
@@ -577,7 +594,7 @@
     "    return frame_stream\n",
     "\n",
     "\n",
-    "big_image_viewer(root_group[\"quantized\"])"
+    "# big_image_viewer(root_group['quantized'])"
    ]
   },
   {
