Fixed display_plot_browser bug in minimal test case.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
@@ -224,8 +224,8 @@
     "                        display((kwargs, np.random.random()))\n",
     "                        # display(recursive_getattr(plots(**kwargs), path))\n",
     "\n",
-    "                # callback(**stream.contents)\n",
-    "                frame_stream.add_subscriber(callback)\n",
+    "                callback(**stream.contents)\n",
+    "                stream.add_subscriber(callback)\n",
     "\n",
     "\n",
     "def plot_browser(plots, to_display=None, path=()):\n",
@@ -252,9 +252,14 @@
     "    return widgets.VBox(children)\n",
     "\n",
     "\n",
-    "frame_stream = FrameStream()\n",
-    "display(frame_browser(root_group[\"quantized\"], frame_stream))\n",
-    "display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream)"
+    "# frame_stream = FrameStream()\n",
+    "# display(frame_browser(root_group['quantized'], frame_stream))\n",
+    "# display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream);\n",
+    "s2 = FrameStream()\n",
+    "display(frame_browser(root_group[\"quantized\"], s2))\n",
+    "display_plot_browser(\n",
+    "    lambda t, v: {\"a\": {\"b\": {\"c\": 2}}, \"x\": 1} if v in diag_pos else None, s2\n",
+    ")"
    ]
   },
   {
@@ -265,14 +270,19 @@
    "source": [
     "o = widgets.Output()\n",
     "display(o)\n",
-    "# normal python type\n",
-    "    def callback(**kwargs):\n",
-    "        with output:\n",
-    "            clear_output()\n",
-    "            display((kwargs, np.random.random()))\n",
-    "            #display(recursive_getattr(plots(**kwargs), path))\n",
-    "    #callback(**stream.contents)\n",
-    "    frame_stream.add_subscriber(callback)"
+    "\n",
+    "\n",
+    "def callback(**kwargs):\n",
+    "    # print(kwargs)\n",
+    "    with o:\n",
+    "        clear_output()\n",
+    "        display((kwargs, np.random.random()))\n",
+    "\n",
+    "\n",
+    "# callback(**stream.contents)\n",
+    "s = FrameStream()\n",
+    "display(frame_browser(root_group[\"quantized\"], s))\n",
+    "s.add_subscriber(callback)"
    ]
   },
   {
