Fixed display_plot_browser. The problem was that testing isinstance against hv.Element did not include Overlays/Layouts. Hoping hv.core.dimension.ViewableElement is the right comparison, will have to check.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180201 Prototyping.ipynb
@@ -201,31 +201,38 @@
     "    return browser\n",
     "\n",
     "\n",
-    "def _plot_browser_dmap(callback, **kwargs):\n",
-    "    return callback(**kwargs)\n",
-    "\n",
-    "\n",
     "def display_plot_browser_contents(plots, to_display, stream=None):\n",
     "    for output, (obj, path) in to_display.items():\n",
     "        if stream is None:\n",
     "            with output:\n",
     "                display(obj)\n",
     "        else:\n",
-    "            if isinstance(obj, hv.Element):\n",
+    "            # print(path, obj.__class__)\n",
+    "            if isinstance(\n",
+    "                obj, hv.core.dimension.ViewableElement\n",
+    "            ):  # TODO: is this the right comparison?\n",
     "                # preprocess: make into DynamicMaps, regrid Images, etc.\n",
-    "                # dmap = hv.DynamicMap(lambda **kwargs: recursive_getattr(plots(**kwargs), path), streams=[stream])\n",
-    "                # display(dmap)\n",
-    "                pass\n",
+    "                if isinstance(obj, (hv.Image, hv.Raster)):\n",
+    "                    continue\n",
+    "\n",
+    "                def callback(p, **kwargs):\n",
+    "                    return recursive_getattr(plots(**kwargs), p)\n",
+    "\n",
+    "                dmap = hv.DynamicMap(partial(callback, path), streams=[stream])\n",
+    "                with output:\n",
+    "                    display(dmap)\n",
     "            else:\n",
     "                # normal python type\n",
-    "                def callback(**kwargs):\n",
-    "                    with output:\n",
+    "                def callback(o, p, **kwargs):\n",
+    "                    with o:\n",
     "                        clear_output()\n",
-    "                        display((kwargs, np.random.random()))\n",
-    "                        # display(recursive_getattr(plots(**kwargs), path))\n",
+    "                        display(recursive_getattr(plots(**kwargs), p))\n",
+    "                        # display((p, kwargs, np.random.random(), recursive_getattr(plots(**kwargs), p)))\n",
+    "                        # display((p, np.random.random()))\n",
     "\n",
-    "                callback(**stream.contents)\n",
-    "                stream.add_subscriber(callback)\n",
+    "                callback(output, path, **stream.contents)\n",
+    "                # we need to do the partial trick, or else output is only bound to the last output of the for loop\n",
+    "                stream.add_subscriber(partial(callback, output, path))\n",
     "\n",
     "\n",
     "def plot_browser(plots, to_display=None, path=()):\n",
@@ -252,13 +259,50 @@
     "    return widgets.VBox(children)\n",
     "\n",
     "\n",
-    "# frame_stream = FrameStream()\n",
-    "# display(frame_browser(root_group['quantized'], frame_stream))\n",
-    "# display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream);\n",
-    "s2 = FrameStream()\n",
-    "display(frame_browser(root_group[\"quantized\"], s2))\n",
-    "display_plot_browser(\n",
-    "    lambda t, v: {\"a\": {\"b\": {\"c\": 2}}, \"x\": 1} if v in diag_pos else None, s2\n",
+    "frame_stream = FrameStream()\n",
+    "display(frame_browser(root_group[\"quantized\"], frame_stream))\n",
+    "display_plot_browser(lambda t, v: diag_pos[v] if v in diag_pos else None, frame_stream)\n",
+    "# s2 = FrameStream()\n",
+    "# display(frame_browser(root_group['quantized'], s2))\n",
+    "# display_plot_browser(lambda t, v: {'a': {'b': {'c': 2}}, 'x': 1} if v in diag_pos else None, s2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.core.overlay.Overlay.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.core.layout.Layout.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.plotting.util.displayable(\"h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isinstance(\n",
+    "    diag_pos[0][\"label_1\"][\"trench_rotation\"][\"hough_2\"][\"theta_range (deg)\"],\n",
+    "    hv.core.dimension.ViewableElement,\n",
     ")"
    ]
   },
