After much consternation, worked around https://github.com/ioam/holoviews/issues/2298. Regridding image viewer works in display_plot_browser, and it's pretty fast!

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,4 +1,5 @@
-plot_browser with dynamicmap slider (to scroll through frames, using regrid)
+plot browser: regrid (using hacky solution)
+plot browser: only update visible outputs (accordion state)
 rotation-invariant detrending
 refactor trench detection
 
