--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180202 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180202 Prototyping.ipynb
@@ -108,7 +108,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Config"
    ]
@@ -116,17 +118,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# warnings.filterwarnings('ignore', 'Conversion of the second argument of issubdtype')\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "# warnings.filterwarnings('ignore', category=FutureWarning)\n",
+    "warnings.filterwarnings(\"default\", category=FutureWarning)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -142,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -628,7 +636,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "FrameStream = Stream.define(\"Frame\", t=0, v=0)\n",
@@ -964,6 +974,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
