--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180204 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180204 Prototyping.ipynb
@@ -108,7 +108,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Config"
    ]
@@ -116,17 +118,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "# warnings.filterwarnings('ignore', 'Conversion of the second argument of issubdtype')\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "# warnings.filterwarnings('default', category=FutureWarning)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -142,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "init_cell": true
    },
    "outputs": [],
@@ -191,22 +199,23 @@
     "            if isinstance(\n",
     "                obj, hv.core.dimension.ViewableElement\n",
     "            ):  # TODO: is this the right comparison?\n",
-    "                # preprocess: make into DynamicMaps, regrid Images, etc.\n",
-    "                if isinstance(obj, (hv.Image, hv.RGB, hv.Raster)):\n",
-    "                    continue\n",
     "\n",
-    "                def callback(p, **kwargs):\n",
+    "                def callback(p, x_range, y_range, **kwargs):\n",
     "                    plot = recursive_getattr(plots(**kwargs), p)\n",
+    "                    # allow customizable aggregators\n",
     "                    return plot.map(\n",
-    "                        regrid,\n",
+    "                        lambda img: regrid.instance(\n",
+    "                            dynamic=False,\n",
+    "                            x_range=x_range,\n",
+    "                            y_range=y_range,\n",
+    "                            aggregator=\"first\",\n",
+    "                        )(img).redim.range(z=(0, img.data.max())),\n",
     "                        lambda obj: isinstance(obj, (hv.Image, hv.RGB, hv.Raster)),\n",
-    "                    ).collate()\n",
+    "                    )\n",
     "\n",
     "                dmap = hv.DynamicMap(\n",
-    "                    partial(callback, path), streams=[stream]\n",
+    "                    partial(callback, path), streams=[stream, hv.streams.RangeXY()]\n",
     "                )  # .collate()\n",
-    "                # dmap = obj.map(regrid, lambda obj: isinstance(obj, (hv.Image, hv.RGB, hv.Raster))).collate()\n",
-    "                # dmap = regrid(dmap)\n",
     "                with output:\n",
     "                    display(dmap)\n",
     "            else:\n",
@@ -628,7 +637,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "FrameStream = Stream.define(\"Frame\", t=0, v=0)\n",
@@ -964,6 +975,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
